--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background: #111827;
+body {
+  background: #f6f6f8;
 }
 
 @layer components {
-    .transition-300 {
-        @apply transition-all duration-300 ease-in-out;
-      }
+  .transition-300 {
+    @apply transition-all duration-300 ease-in-out;
+  }
 
-    .transition-500 {
-        @apply transition-all duration-500 ease-in-out;
-      }
-
+  .transition-500 {
+    @apply transition-all duration-500 ease-in-out;
+  }
 }
